Add USDTF project to defiProjectList

--- a/defiProjectList.json
+++ b/defiProjectList.json
@@ -4,6 +4,6 @@
     "url": "https://trotok-sud.github.io/usdtf-tvl/tvl.json",
     "logo": "",
     "category": "Minting",
-    "poolAddresses": [TCL6M2NnQ1Ath5MgYqpRuJBN1zXjuZa5F4]
+    "poolAddresses": []
   }
 ]
