--- a/defiProjectList.json
+++ b/defiProjectList.json
@@ -1,9 +1,11 @@
 [
   {
     "name": "USDTF",
+    "logoURI": "https://github.com/trotok-sud/USDTF/blob/main/docs/logo.png",
+    "homepage": "https://usdtf.com",
+    "MarketCapLink": "https://www.coingecko.com/en/coins/tether",
     "url": "https://usdtf-tvl-production.up.railway.app/api/tvl",
-    "logo": "",
-    "category": "Minting",
+    "category": "Assets",
     "poolAddresses": ["TCL6M2NnQ1Ath5MgYqpRuJBN1zXjuZa5F4"]
   }
 ]
